@@ -19,8 +19,6 @@
  */
 package org.apache.hadoop.hbase.master.handler;
 
-import java.io.IOException;
-
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.hbase.HRegionInfo;
